[package]
name = "bevy-debug-camera"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/rdelfin/bevy-debug-camera"
keywords = ["gamedev", "bevy", "flycam", "camera", "3d"]
categories = ["game-development"]
description = "A simple camera plugin perfect for debugging in 3D bevy games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
